update CSS styles

--- a/index.html
+++ b/index.html
@@ -100,31 +100,32 @@
       </section>
       <section>
         <div class="container">
-          <div class="tasks-container"></div>
-          <h2 class="tasks">Чим ми займаємося</h2>
-          <ul class="tasks-list list">
-            <li>
-              <img
-                src="./images/main11.jpg"
-                alt="Людина працює за комп'ютером"
-                class="photo"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/main12.jpg"
-                alt="Людина працює за ноутбуком"
-                class="photo"
-              />
-            </li>
-            <li>
-              <img
-                src="./images/main13.jpg"
-                alt="Людина працює за планшетом"
-                class="photo"
-              />
-            </li>
-          </ul>
+          <div class="tasks-container">
+            <h2 class="tasks">Чим ми займаємося</h2>
+            <ul class="tasks-list list">
+              <li>
+                <img
+                  src="./images/main11.jpg"
+                  alt="Людина працює за комп'ютером"
+                  class="photo"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/main12.jpg"
+                  alt="Людина працює за ноутбуком"
+                  class="photo"
+                />
+              </li>
+              <li>
+                <img
+                  src="./images/main13.jpg"
+                  alt="Людина працює за планшетом"
+                  class="photo"
+                />
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
       <section class="our-team">
@@ -177,7 +178,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a lang="en" href="./index.html" class="logo"
+        <a lang="en" href="./index.html" class="logo-footer"
           >Web<span class="logo-part-footer">Studio</span></a
         >
         <address class="address">
