--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
             </li>
           </ul>
           <ul class="projects-list list">
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio1.jpg"
                 alt="На ноутбуці відкритий сайт"
@@ -82,7 +82,7 @@
                 <p class="project-desc">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio2.jpg"
                 alt="Боротьба за мяч між двома баскетболістами"
@@ -96,7 +96,7 @@
                 <p class="project-desc">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio3.jpg"
                 alt="Емблема ресторану морепродуктів"
@@ -108,7 +108,7 @@
                 <p class="project-desc">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio4.jpg"
                 alt="Повнорозмірні навушники"
@@ -120,7 +120,7 @@
                 <p class="project-desc">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio5.jpg"
                 alt="Дві картонні коробки"
@@ -132,7 +132,7 @@
                 <p class="project-desc">Додаток</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio6.jpg"
                 alt="На моніторі відкрито сайт"
@@ -140,13 +140,11 @@
                 width="370"
               />
               <div>
-                <h2 class="project" class="project" lang="en">
-                  Inspiration has no Borders
-                </h2>
+                <h2 class="project" lang="en">Inspiration has no Borders</h2>
                 <p class="project-desc">Веб-сайт</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio7.jpg"
                 alt="Відкрита книга"
@@ -160,7 +158,7 @@
                 <p class="project-desc">Дизайн</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio8.jpg"
                 alt="Бірка для одягу"
@@ -172,7 +170,7 @@
                 <p class="project-desc">Маркетинг</p>
               </div>
             </li>
-            <li>
+            <li class="project-item">
               <img
                 src="./images/portfolio9.jpg"
                 alt="Людина працює за ноутбуком"
@@ -190,7 +188,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a lang="en" href="./index.html" class="logo"
+        <a lang="en" href="./index.html" class="logo-footer"
           >Web<span class="logo-part-footer">Studio</span></a
         >
         <address class="address">
