update CSS styles

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
         </div>
       </section>
-      <section>
+      <section class="tasks-section">
         <div class="container">
           <div class="tasks-container">
             <h2 class="tasks">Чим ми займаємося</h2>
@@ -139,8 +139,10 @@
                 class="photo"
                 width="270"
               />
-              <h3 class="team-member">Ігор Дем'яненко</h3>
-              <p class="member-speciality" lang="en">Product Designer</p>
+              <div class="block">
+                <h3 class="team-member">Ігор Дем'яненко</h3>
+                <p class="member-speciality" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -149,8 +151,10 @@
                 class="photo"
                 width="270"
               />
-              <h3 class="team-member">Ольга Рєпіна</h3>
-              <p class="member-speciality" lang="en">Frontend Developer</p>
+              <div class="block">
+                <h3 class="team-member">Ольга Рєпіна</h3>
+                <p class="member-speciality" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -159,8 +163,10 @@
                 class="photo"
                 width="270"
               />
-              <h3 class="team-member">Микола Тарасов</h3>
-              <p class="member-speciality" lang="en">Marketing</p>
+              <div class="block">
+                <h3 class="team-member">Микола Тарасов</h3>
+                <p class="member-speciality" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -169,8 +175,10 @@
                 class="photo"
                 width="270"
               />
-              <h3 class="team-member">Михайло Єрмаков</h3>
-              <p class="member-speciality" lang="en">UI Designer</p>
+              <div class="block">
+                <h3 class="team-member">Михайло Єрмаков</h3>
+                <p class="member-speciality" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -183,7 +191,7 @@
         >
         <address class="address">
           <ul class="address-list list">
-            <li>
+            <li class="address-item">
               <a
                 href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank"
@@ -192,12 +200,12 @@
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="mailto:info@devstudio.com" class="contact-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="address-item">
               <a href="tel:+380961111111" class="contact-link"
                 >+38 096 111 11 11</a
               >
