--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">Технокряк</h2>
                 <p class="project-desc">Веб-сайт</p>
               </div>
@@ -89,7 +89,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">
                   Постер <span lang="en">Orlean vs Golden Star</span>
                 </h2>
@@ -103,7 +103,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="project-desc">Додаток</p>
               </div>
@@ -115,7 +115,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">Проєкт <span lang="en">Prime</span></h2>
                 <p class="project-desc">Маркетинг</p>
               </div>
@@ -127,7 +127,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">Проєкт <span lang="en">Boxes</span></h2>
                 <p class="project-desc">Додаток</p>
               </div>
@@ -139,7 +139,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project" lang="en">Inspiration has no Borders</h2>
                 <p class="project-desc">Веб-сайт</p>
               </div>
@@ -151,7 +151,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">
                   Видання <span lang="en">Limited Edition</span>
                 </h2>
@@ -165,7 +165,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project">Проєкт <span lang="en">LAB</span></h2>
                 <p class="project-desc">Маркетинг</p>
               </div>
@@ -177,7 +177,7 @@
                 class="photo"
                 width="370"
               />
-              <div>
+              <div class="block-project">
                 <h2 class="project" lang="en">Growing Business</h2>
                 <p class="project-desc">Додаток</p>
               </div>
