--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
     </header>
     <main>
       <section class="hero">
-        <div class="container">
-          <div class="hero-container">
-            <h1 class="hero-name">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-button">Замовити послугу</button>
+        <div class="overlay">
+          <div class="container">
+            <div class="hero-container">
+              <h1 class="hero-name">Ефективні рішення для вашого бізнесу</h1>
+              <button type="button" class="hero-button">
+                Замовити послугу
+              </button>
+            </div>
           </div>
         </div>
       </section>
@@ -66,28 +70,48 @@
           <div class="advantages-container">
             <h2 class="visually-hidden">Наші переваги</h2>
             <ul class="advantages-list list">
-              <li>
+              <li class="advantage-item">
+                <div class="icon-container">
+                  <svg class="advantage-icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-antenna"></use>
+                  </svg>
+                </div>
                 <h3 class="advantage">Увага до деталей</h3>
                 <p class="advantage-desc">
                   Ідейні міркування, і навіть початок повсякденної роботи з
                   формування позиції.
                 </p>
               </li>
-              <li>
+              <li class="advantage-item">
+                <div class="icon-container">
+                  <svg class="advantage-icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </div>
                 <h3 class="advantage">Пунктуальність</h3>
                 <p class="advantage-desc">
                   Завдання організації, особливо рамки і місце навчання кадрів
                   тягне у себе.
                 </p>
               </li>
-              <li>
+              <li class="advantage-item">
+                <div class="icon-container">
+                  <svg class="advantage-icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </div>
                 <h3 class="advantage">Планування</h3>
                 <p class="advantage-desc">
                   Так само консультація з широким активом значною мірою
                   зумовлює.
                 </p>
               </li>
-              <li>
+              <li class="advantage-item">
+                <div class="icon-container">
+                  <svg class="advantage-icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </div>
                 <h3 class="advantage">Сучасні технології</h3>
                 <p class="advantage-desc">
                   Значимість цих проблем настільки очевидна, що реалізація
@@ -142,6 +166,34 @@
               <div class="block">
                 <h3 class="team-member">Ігор Дем'яненко</h3>
                 <p class="member-speciality" lang="en">Product Designer</p>
+                <ul class="net-list list">
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -154,6 +206,34 @@
               <div class="block">
                 <h3 class="team-member">Ольга Рєпіна</h3>
                 <p class="member-speciality" lang="en">Frontend Developer</p>
+                <ul class="net-list list">
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -166,6 +246,34 @@
               <div class="block">
                 <h3 class="team-member">Микола Тарасов</h3>
                 <p class="member-speciality" lang="en">Marketing</p>
+                <ul class="net-list list">
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -178,7 +286,83 @@
               <div class="block">
                 <h3 class="team-member">Михайло Єрмаков</h3>
                 <p class="member-speciality" lang="en">UI Designer</p>
+                <ul class="net-list list">
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link"
+                      ><svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="net-item">
+                    <a href="" class="net-link">
+                      <svg class="net-icon" width="20" height="20">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <h2 class="clients">Постійні клієнти</h2>
+          <ul class="clients-list list">
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link"
+                ><svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
+              ></a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="" class="clients-link">
+                <svg class="clients-icon" width="106" height="60">
+                  <use href="./images/icons.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
