--- a/portfolio.html
+++ b/portfolio.html
@@ -188,32 +188,67 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a lang="en" href="./index.html" class="logo-footer"
-          >Web<span class="logo-part-footer">Studio</span></a
-        >
-        <address class="address">
-          <ul class="address-list list">
-            <li>
-              <a
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                class="address-link"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="contact-link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="contact-link"
-                >+38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <div class="container-footer">
+          <div class="container-address">
+            <a lang="en" href="./index.html" class="logo-footer"
+              >Web<span class="logo-part-footer">Studio</span></a
+            >
+            <address class="address">
+              <ul class="address-list list">
+                <li class="address-item">
+                  <a
+                    href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    class="address-link"
+                    >м. Київ, пр-т Лесі Українки, 26</a
+                  >
+                </li>
+                <li class="address-item">
+                  <a href="mailto:info@devstudio.com" class="contact-link"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380961111111" class="contact-link"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="net-links">
+            <span class="join">приєднуйтесь</span>
+            <ul class="footer-list list">
+              <li class="net-item">
+                <a href="" class="footer-link">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="net-item">
+                <a href="" class="footer-link"
+                  ><svg class="footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-twitter"></use></svg
+                ></a>
+              </li>
+              <li class="net-item">
+                <a href="" class="footer-link"
+                  ><svg class="footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="net-item">
+                <a href="" class="footer-link">
+                  <svg class="footer-icon" width="20" height="20">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
