--- a/index.html
+++ b/index.html
@@ -38,12 +38,27 @@
             </ul>
           </nav>
           <ul class="auth-nav list auth-menu">
-            <li>
+            <!-- <li>
+              <svg class="auth-nav-icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+            </li> -->
+            <li class="auth-nav-item">
+              <a href="">
+                <svg class="auth-nav-icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+              </a>
               <a href="mailto:info@devstudio.com" class="contact-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="auth-nav-item">
+              <a href="">
+                <svg class="auth-nav-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>
+              </a>
               <a href="tel:+380961111111" class="contact-link"
                 >+38 096 111 11 11</a
               >
