--- a/portfolio.html
+++ b/portfolio.html
@@ -34,13 +34,17 @@
             </ul>
           </nav>
           <ul class="auth-nav list auth-menu">
-            <li>
-              <a href="mailto:info@devstudio.com" class="contact-link"
+            <li class="auth-nav-item">
+              <a href="mailto:info@devstudio.com" class="contact-link">
+                <svg class="auth-nav-icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use></svg
                 >info@devstudio.com</a
               >
             </li>
-            <li>
-              <a href="tel:+380961111111" class="contact-link"
+            <li class="auth-nav-item">
+              <a href="tel:+380961111111" class="contact-link">
+                <svg class="auth-nav-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-smartphone"></use></svg
                 >+38 096 111 11 11</a
               >
             </li>
